# vingsforge

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/specs/: 00-visao-geral.md  01-projetos.md  02-chats.md  03-motor-claude.md  04-ferramentas-permissoes.md  05-execucao-remota-vps.md  06-interface-ui.md  07-configuracoes.md  08-persistencia.md  09-otimizacao-linux.md
scripts/: update.sh
